fix nav overflow

--- a/src/styles/components/_c-nav.scss
+++ b/src/styles/components/_c-nav.scss
@@ -6,6 +6,8 @@
   align-items: center;
 
   .nav-link, .nav-menu, .nav-logo {
+    height: $nav-height;
+
     a {
       display: flex;
       align-items: center;
